--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     </nav>
 
     <div id="backdrop">
-        <img src="Photos/Icons/Backdrop.jpg" alt="">
+        <img src="DONSCHKI.GITHUB.IO/Photos/Icons/Backdrop.jpg" alt="">
     </div>
 
     <!------------------------- MAIN ABOUT US PRESENTATION SECTION ----------------------->
