--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     </nav>
 
     <div id="backdrop">
-        <img src="Donschki.github.io/Photos/Icons/Backdrop.jpg" alt="">
+        <img src="/Photos/Icons/Backdrop.jpg" alt="">
     </div>
 
     <!------------------------- MAIN ABOUT US PRESENTATION SECTION ----------------------->
